@@ -1,4 +1,7 @@
 
+- added -I flag to bakefile_gen too
+
+
 Version 0.2.8
 -------------
 
